--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anticore-contracts",
-  "version": "0.0.4",
+  "version": "1.0.0",
   "description": "A module to pick the common anticore contracts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,9 +21,8 @@
   },
   "homepage": "https://github.com/Lcfvs/anticore-contracts#readme",
   "dependencies": {
-    "anticore": "^3.0.0-beta-007",
-    "anticore-apis": "0.0.21",
-    "anticore-core": "0.0.16",
-    "anticore-dom": "0.0.8"
+    "anticore": "^3.0.2",
+    "anticore-core": "^1.0.0",
+    "anticore-dom": "^1.0.1"
   }
 }
